# AQM_Project

./: .env.example  .gitignore  ARCHITECTURE.md  DATA_FLOW.md  FINAL_PROJECT_NOTES.md  PROJECT_FINAL_STATUS.md  PROJECT_FINISHING_PLAN.md  README.md  TEST_CASES.md  app.py  index.html  package-lock.json  package.json
backend/: __init__.py  analysis.py  exports.py  main.py  models.py  pyproject.toml  recommendations.py
backend/tests/: test_analysis.py
docs/: meilenstein-plan.md  projektplan-portfolio-risikoanalyse.md
src/: App.tsx  styles.css
src/data/: assets.ts
src/lib/: api.ts  portfolioMath.ts  portfolioStorage.ts
